--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body>
     <header>
         <h1>Dr. Max Mustermann</h1>
-        <p>Mathematiker – Forschungsgebiet: Algebraische Geometrie</p>
+        <p>Mathematiker – Forschungsgebiet:</p>
     </header>
 
     <section>
         <h2>Forschung</h2>
-        <p>Ich interessiere mich besonders für Modulräume, und ihre Klassifikation. Zum Beispiel:</p>
+        <p>Ich interessiere . Zum Beispiel:</p>
         <p>\[
-            H^1(X, \mathcal{O}_X) \cong \mathrm{Hom}(\pi_1(X), \mathbb{C})
+            H^1
         \]</p>
     </section>
 
     <section>
         <h2>Lehre</h2>
         <ul>
-            <li>Analysis I – Winter 2024</li>
-            <li>Algebra II – Sommer 2025</li>
+            <li></li>
+            <li></li>
         </ul>
     </section>
 
