--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
+    <main>
     <header>
         <h1>Dr. Max Mustermann</h1>
         <p>Mathematiker – Forschungsgebiet:</p>
@@ -35,5 +36,6 @@
         <p>E-Mail: max.mustermann@uni.de</p>
         <p><a href="https://github.com/maxmustermann">GitHub</a></p>
     </section>
+    <main>
 </body>
 </html>
