--- a/index.html
+++ b/index.html
@@ -1,41 +1,16 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>Max Mustermann – Mathematiker</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <meta charset="UTF-8">
+  <title>Dr. Max Mustermann</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <main>
-    <header>
-        <h1>Dr. Max Mustermann</h1>
-        <p>Mathematiker – Forschungsgebiet:</p>
-    </header>
-
-    <section>
-        <h2>Forschung</h2>
-        <p>Ich interessiere . Zum Beispiel:</p>
-        <p>\[
-            H^1
-        \]</p>
-    </section>
-
-    <section>
-        <h2>Lehre</h2>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Kontakt</h2>
-        <p>E-Mail: max.mustermann@uni.de</p>
-        <p><a href="https://github.com/maxmustermann">GitHub</a></p>
-    </section>
-    <main>
+<body class="center">
+  <h1>Dr. Max Mustermann</h1>
+  <nav>
+    <a href="/forschung/">Forschung</a>
+    <a href="/lehre/">Lehre</a>
+    <a href="/kontakt/">Kontakt</a>
+  </nav>
 </body>
 </html>
