--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <title>Dr. Max Mustermann</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="center">
-  <h1>Dr. Max Mustermann</h1>
-  <nav>
-    <a href="/forschung/">Forschung</a>
-    <a href="/lehre/">Lehre</a>
-    <a href="/kontakt/">Kontakt</a>
-  </nav>
+<body>
+  <div class="center-wrapper">
+    <h1>Dr. Max Mustermann</h1>
+    <nav>
+      <a href="/forschung/">Forschung</a>
+      <a href="/lehre/">Lehre</a>
+      <a href="/kontakt/">Kontakt</a>
+    </nav>
+  </div>
 </body>
 </html>
