--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -6,15 +6,15 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <nav>
-    <a href="/">Startseite</a>
-    <a href="/forschung/">Forschung</a>
-    <a href="/lehre/">Lehre</a>
-  </nav>
-  <main>
+  <div class="center-wrapper">
     <h1>Kontakt</h1>
     <p>E-Mail: max.mustermann@uni.de</p>
     <p><a href="https://github.com/eickhoffjan" target="_blank">GitHub</a></p>
-  </main>
+    <nav>
+      <a href="/">Startseite</a>
+      <a href="/forschung/">Forschung</a>
+      <a href="/lehre/">Lehre</a>
+    </nav>
+  </div>
 </body>
 </html>
