--- a/lehre/index.html
+++ b/lehre/index.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <nav>
-    <a href="/">Startseite</a>
-    <a href="/forschung/">Forschung</a>
-    <a href="/kontakt/">Kontakt</a>
-  </nav>
-  <main>
+  <div class="center-wrapper">
     <h1>Lehre</h1>
     <p>Hier findest du Informationen zu meinen Lehrveranstaltungen.</p>
-  </main>
+    <nav>
+      <a href="/">Startseite</a>
+      <a href="/forschung/">Forschung</a>
+      <a href="/kontakt/">Kontakt</a>
+    </nav>
+  </div>
 </body>
 </html>
