--- a/forschung/index.html
+++ b/forschung/index.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <nav>
-    <a href="/">Startseite</a>
-    <a href="/lehre/">Lehre</a>
-    <a href="/kontakt/">Kontakt</a>
-  </nav>
-  <main>
+  <div class="center-wrapper">
     <h1>Forschung</h1>
     <p>Ich interessiere mich z. B. für <em>H<sup>1</sup></em>.</p>
-  </main>
+    <nav>
+      <a href="/">Startseite</a>
+      <a href="/lehre/">Lehre</a>
+      <a href="/kontakt/">Kontakt</a>
+    </nav>
+  </div>
 </body>
 </html>
