--- a/ueber-mich/index.html
+++ b/ueber-mich/index.html
@@ -2,16 +2,19 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Forschung – Dr. Max Mustermann</title>
+  <title>Über mich – Dr. Max Mustermann</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <div class="center-wrapper">
-    <h1>Forschung</h1>
-    <p>Ich interessiere mich z. B. für <em>H<sup>1</sup></em>.</p>
+    <h1>Über mich</h1>
+    <p>Ich bin Mathematiker mit Interesse an funktionalanalytischen Methoden und deren Anwendungen.</p>
     <nav>
       <a href="/">Startseite</a>
+      <a href="/interessen/">Interessen</a>
       <a href="/lehre/">Lehre</a>
+      <a href="/projekte/">Projekte</a>
+      <a href="/blog/">Blog</a>
       <a href="/kontakt/">Kontakt</a>
     </nav>
   </div>
