--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Dr. Max Mustermann</title>
+  <title>Jan Eickhoff</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="center-wrapper">
-    <h1>Dr. Max Mustermann</h1>
+    <h1>Jan Eickhoff</h1>
     <nav>
       <a href="/forschung/">Forschung</a>
       <a href="/lehre/">Lehre</a>
