--- a/interessen/index.html
+++ b/interessen/index.html
@@ -2,21 +2,20 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Kontakt – Dr. Max Mustermann</title>
+  <title>Interessen – Dr. Max Mustermann</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <div class="center-wrapper">
-    <h1>Kontakt</h1>
-    <p>E-Mail: max.mustermann@uni.de</p>
-    <p><a href="https://github.com/eickhoffjan" target="_blank">GitHub</a></p>
+    <h1>Interessen</h1>
+    <p>Meine Interessen umfassen Analysis, partielle Differentialgleichungen und Funktionalanalysis.</p>
     <nav>
       <a href="/">Startseite</a>
       <a href="/ueber-mich/">Über mich</a>
-      <a href="/interessen/">Interessen</a>
       <a href="/lehre/">Lehre</a>
       <a href="/projekte/">Projekte</a>
       <a href="/blog/">Blog</a>
+      <a href="/kontakt/">Kontakt</a>
     </nav>
   </div>
 </body>
