--- a/about/index.html
+++ b/about/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Blog – Jan Eickhoff</title>
+  <title>About – Jan Eickhoff</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <div class="center-wrapper">
-    <h1>Blog</h1>
-    <p>Thoughts, ideas, and more.</p>
+    <h1>About</h1>
+    <p>I am a Mathematics Bachelor's student at the Technical University of Munich.</p>
     <nav>
       <a href="/">Home</a>
-      <a href="/about/">About</a>
       <a href="/interests/">Interests</a>
       <a href="/teaching/">Teaching</a>
       <a href="/projects/">Projects</a>
+      <a href="/blog/">Blog</a>
       <a href="/contact/">Contact</a>
     </nav>
   </div>
