--- a/contact/index.html
+++ b/contact/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Blog – Jan Eickhoff</title>
+  <title>Contact – Jan Eickhoff</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <div class="center-wrapper">
-    <h1>Blog</h1>
-    <p>Thoughts, ideas, and more.</p>
+    <h1>Contact</h1>
+    <p>Email: jan.eickhoff@tum.de</p>
+    <p><a href="https://linkedin.com/in/janeickhoff" target="_blank">LinkedIn</a></p>
+    <p><a href="https://github.com/eickhoffjan" target="_blank">GitHub</a></p>
     <nav>
       <a href="/">Home</a>
       <a href="/about/">About</a>
       <a href="/interests/">Interests</a>
       <a href="/teaching/">Teaching</a>
       <a href="/projects/">Projects</a>
-      <a href="/contact/">Contact</a>
+      <a href="/blog/">Blog</a>
     </nav>
   </div>
 </body>
