--- a/projects/index.html
+++ b/projects/index.html
@@ -4,11 +4,70 @@
   <meta charset="UTF-8">
   <title>Projects – Jan Eickhoff</title>
   <link rel="stylesheet" href="../style.css">
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
 </head>
 <body>
   <div class="center-wrapper">
     <h1>Projects</h1>
     <p>Here you will find details about my ongoing and past projects.</p>
+
+    <section class="teaching-block">
+      <h2>Seminars</h2>
+      <ul>
+        <li>
+          <strong>Homoclinic points and period doubling </strong> Chaotic dynamics, TUM<br>
+          <i>
+            An introduction to homoclinic points and their connection to chaotic 
+            dynamics—defining the concept, exploring their link to homoclinic orbits, 
+            and highlighting their role in the emergence of chaos.
+          </i>
+        </li>
+        <li>
+          <strong>Classification of isometries in the Euclidean plane</strong> Geometry and Groups,  Hurwitz Seminar - TUM<br>
+          <i>
+            A concise overview of all distance‐preserving maps in the plane—translations, rotations, reflections and glide 
+            reflections—showing each arises from at most three reflections and forming 
+            the foundation for higher‐dimensional generalizations.
+          </i>
+        </li>
+        <li>
+          <strong>Rational functions on plane curves</strong> Algebraic Curves, TUM<br>
+          <i>
+            This seminar is ongoing.
+          </i>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Neuer Abschnitt: Sommersemester 2025 -->
+    <section class="teaching-block">
+      <h2>Honors & Awards</h2>
+      <ul>
+        <li>
+          <strong>Winning Team - Reply Challenge at TUM.ai Makeathon 2024</strong>, TUM<br>
+          <i>
+            My team won the Reply Challenge at the TUM.ai Makeathon 2024, making us one 
+            of four winning teams—each selected for the best solution in a specific 
+            challenge track. Our project involved an AI-based solution to a real-world business problem.
+          </i>
+        </li>
+      </ul>
+    </section>
+
+    <section class="teaching-block">
+      <h2>Other</h2>
+      <ul>
+        <li>
+          <strong>On the Noetherian Property of Rings as Modules over Larger Rings</strong>, Commutative Algebra<br>
+          <i>
+          </i>
+        </li>
+      </ul>
+    </section>
+
     <nav>
       <a href="/">Home</a>
       <a href="/about/">About</a>
