--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,7 @@
     <p>I am a Mathematics Bachelor's student at the Technical University of Munich.</p>
     <nav>
       <a href="/">Home</a>
+      <a href="/about/" class="active">About</a>
       <a href="/interests/">Interests</a>
       <a href="/teaching/">Teaching</a>
       <a href="/projects/">Projects</a>
