--- a/projects/index.html
+++ b/projects/index.html
@@ -57,22 +57,13 @@
       </ul>
     </section>
 
-    <section class="teaching-block">
-      <h2>Other</h2>
-      <ul>
-        <li>
-          <strong>On the Noetherian Property of Rings as Modules over Larger Rings</strong>, Commutative Algebra<br>
-          <i>
-          </i>
-        </li>
-      </ul>
-    </section>
 
     <nav>
       <a href="/">Home</a>
       <a href="/about/">About</a>
       <a href="/interests/">Interests</a>
       <a href="/teaching/">Teaching</a>
+      <a href="/projects/" class="active">Projects</a>
       <a href="/blog/">Blog</a>
       <a href="/contact/">Contact</a>
     </nav>
