--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div id="three-container" style="width: 400px; height: 400px;"></div>
     <h1>Jan Eickhoff</h1>
     <nav>
+      <a href="/" class="active">Home</a>
       <a href="/about/">About</a>
       <a href="/interests/">Interests</a>
       <a href="/teaching/">Teaching</a>
