--- a/teaching/index.html
+++ b/teaching/index.html
@@ -56,6 +56,7 @@
       <a href="/">Home</a>
       <a href="/about/">About</a>
       <a href="/interests/">Interests</a>
+      <a href="/teaching/" class="active">Teaching</a>
       <a href="/projects/">Projects</a>
       <a href="/blog/">Blog</a>
       <a href="/contact/">Contact</a>
