--- a/projects/index.html
+++ b/projects/index.html
@@ -21,15 +21,15 @@
           <strong>Homoclinic points and period doubling </strong> Chaotic dynamics, TUM<br>
           <i>
             An introduction to homoclinic points and their connection to chaotic 
-            dynamics—defining the concept, exploring their link to homoclinic orbits, 
+            dynamics - defining the concept, exploring their link to homoclinic orbits, 
             and highlighting their role in the emergence of chaos.
           </i>
         </li>
         <li>
           <strong>Classification of isometries in the Euclidean plane</strong> Geometry and Groups,  Hurwitz Seminar - TUM<br>
           <i>
-            A concise overview of all distance‐preserving maps in the plane—translations, rotations, reflections and glide 
-            reflections—showing each arises from at most three reflections and forming 
+            A concise overview of all distance‐preserving maps in the plane - translations, rotations, reflections and glide 
+            reflections - showing each arises from at most three reflections and forming 
             the foundation for higher‐dimensional generalizations.
           </i>
         </li>
