--- a/contact/index.html
+++ b/contact/index.html
@@ -18,6 +18,7 @@
       <a href="/teaching/">Teaching</a>
       <a href="/projects/">Projects</a>
       <a href="/blog/">Blog</a>
+      <a href="/contact/" class="active">Contact</a>
     </nav>
   </div>
 </body>
