--- a/interests/index.html
+++ b/interests/index.html
@@ -12,6 +12,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/about/">About</a>
+      <a href="/interests/" class="active">Interests</a>
       <a href="/teaching/">Teaching</a>
       <a href="/projects/">Projects</a>
       <a href="/blog/">Blog</a>
