--- a/projects/index.html
+++ b/projects/index.html
@@ -50,7 +50,7 @@
           <strong>Winning Team - Reply Challenge at TUM.ai Makeathon 2024</strong>, TUM<br>
           <i>
             My team won the Reply Challenge at the TUM.ai Makeathon 2024, making us one 
-            of four winning teams—each selected for the best solution in a specific 
+            of four winning teams - each selected for the best solution in a specific 
             challenge track. Our project involved an AI-based solution to a real-world business problem.
           </i>
         </li>
