--- a/projects/index.html
+++ b/projects/index.html
@@ -18,23 +18,23 @@
       <h2>Seminars</h2>
       <ul>
         <li>
-          <strong>Homoclinic points and period doubling </strong> Chaotic dynamics, TUM<br>
+          <strong>Homoclinic Points and Period Doubling </strong> Chaotic dynamics, TUM<br>
           <i>
             An introduction to homoclinic points and their connection to chaotic 
-            dynamics - defining the concept, exploring their link to homoclinic orbits, 
+            dynamics – defining the concept, exploring their link to homoclinic orbits, 
             and highlighting their role in the emergence of chaos.
           </i>
         </li>
         <li>
-          <strong>Classification of isometries in the Euclidean plane</strong> Geometry and Groups,  Hurwitz Seminar - TUM<br>
+          <strong>Classification of Isometries in the Euclidean Plane</strong> Geometry and Groups,  Hurwitz Seminar - TUM<br>
           <i>
-            A concise overview of all distance‐preserving maps in the plane - translations, rotations, reflections and glide 
-            reflections - showing each arises from at most three reflections and forming 
+            A concise overview of all distance‐preserving maps in the plane – translations, rotations, reflections and glide 
+            reflections – showing each arises from at most three reflections and forming 
             the foundation for higher‐dimensional generalizations.
           </i>
         </li>
         <li>
-          <strong>Rational functions on plane curves</strong> Algebraic Curves, TUM<br>
+          <strong>Rational Functions on Plane Curves</strong> Algebraic Curves, TUM<br>
           <i>
             This seminar is ongoing.
           </i>
@@ -50,7 +50,7 @@
           <strong>Winning Team - Reply Challenge at TUM.ai Makeathon 2024</strong>, TUM<br>
           <i>
             My team won the Reply Challenge at the TUM.ai Makeathon 2024, making us one 
-            of four winning teams - each selected for the best solution in a specific 
+            of four winning teams – each selected for the best solution in a specific 
             challenge track. Our project involved an AI-based solution to a real-world business problem.
           </i>
         </li>
