--- a/teaching/index.html
+++ b/teaching/index.html
@@ -11,9 +11,9 @@
     <p>Here you can find information about my  teaching activities.</p>
 
 
-    <!-- Neuer Abschnitt: Wintersemester 2024/25 -->
+    <!-- Neuer Abschnitt: Winter Semester 2024/25 -->
     <section class="teaching-block">
-      <h2>Wintersemester 2024/25</h2>
+      <h2>Winter Semester 2024/25</h2>
       <ul>
         <li>
           <strong>Guest Lecturer</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
@@ -32,9 +32,9 @@
       </ul>
     </section>
 
-    <!-- Neuer Abschnitt: Sommersemester 2025 -->
+    <!-- Neuer Abschnitt: Summer Semester 2025 -->
     <section class="teaching-block">
-      <h2>Sommersemester 2025</h2>
+      <h2>Summer Semester 2025</h2>
       <ul>
         <li>
           <strong>Teaching Assistant</strong>, Elementary Applications of Mathematics in Computer Science and Engineering (STEM), TUM<br>
@@ -50,6 +50,10 @@
           </i>
         </li>
       </ul>
+    </section>
+
+    <section class="teaching-block">
+      <h2>Winter Semester 2025/26 (TBA)</h2>
     </section>
 
     <nav>
