--- a/projects/index.html
+++ b/projects/index.html
@@ -57,6 +57,22 @@
       </ul>
     </section>
 
+    <!-- Neuer Abschnitt: Sommersemester 2025 -->
+    <section class="teaching-block">
+      <h2>Volunteer Experience</h2>
+      <ul>
+        <li>
+          <strong>Semester Representative</strong>, TUM (Oct 2022 - Oct 2023)<br>
+          <i>
+            As a Semester Representative, I played a role in 
+            facilitating communication between students and the university 
+            to improve the overall learning experience. I supported my fellow 
+            students by addressing their concerns and serving as a bridge between 
+            them and the faculty to ensure their voices were heard. 
+          </i>
+        </li>
+      </ul>
+    </section>
 
     <nav>
       <a href="/">Home</a>
