--- a/teaching/index.html
+++ b/teaching/index.html
@@ -16,7 +16,7 @@
       <h2>Winter Semester 2024/25</h2>
       <ul>
         <li>
-          <strong>Guest Lecturer</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
+          <strong>Linear Algebra – Guest Lecturer</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
           <i>
             Delivered a guest lecture on key concepts in linear algebra, aiming to equip 
             students with the foundational understanding needed to follow the 
@@ -46,7 +46,7 @@
         <li>
           <strong>Student Assistant</strong>, Algebra, TUM<br>
           <i>
-            Responsible for grading and providing feedback on homework assignments.
+            Responsible for grading and providing feedback on homework assignments and once assisted as a tutor.
           </i>
         </li>
       </ul>
@@ -54,6 +54,11 @@
 
     <section class="teaching-block">
       <h2>Winter Semester 2025/26 (TBA)</h2>
+      <ul>
+        <li>
+          <strong>Guest Lecturer</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
+        </li>
+      </ul>
     </section>
 
     <nav>
