--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,7 @@
           <strong>Rational Functions on Plane Curves</strong> Algebraic Curves, TUM<br>
           <i>
             The field of rational functions on projective plane curves over an algebraically 
-            closed field is investigated, including the reconstruction of the one‑variable 
+            closed field was investigated, including the reconstruction of the one‑variable 
             function field, its realization in the projective plane, decomposition into components, 
             and birational classification.
           </i>
