--- a/teaching/index.html
+++ b/teaching/index.html
@@ -16,7 +16,7 @@
       <h2>Winter Semester 2024/25</h2>
       <ul>
         <li>
-          <strong>Linear Algebra – Guest Lecturer</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
+          <strong>Guest Lecturer - Linear Algebra</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
           <i>
             Delivered a guest lecture on key concepts in linear algebra, aiming to equip 
             students with the foundational understanding needed to follow the 
@@ -57,6 +57,9 @@
       <ul>
         <li>
           <strong>Guest Lecturer</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
+          <i>
+            TBA
+          </i>
         </li>
       </ul>
     </section>
