--- a/projects/index.html
+++ b/projects/index.html
@@ -38,7 +38,7 @@
           <i>
             The field of rational functions on projective plane curves over an algebraically 
             closed field was investigated, including the reconstruction of the one‑variable 
-            function field, its realization in the projective plane, decomposition into components, 
+            function field, its realization in the projective plane, decomposition into components
             and birational classification.
           </i>
         </li>
