--- a/teaching/index.html
+++ b/teaching/index.html
@@ -58,7 +58,7 @@
         <li>
           <strong>Guest Lecturer</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
           <i>
-            TBA
+            <em>TBA</em>
           </i>
         </li>
       </ul>
