--- a/teaching/index.html
+++ b/teaching/index.html
@@ -56,7 +56,7 @@
       <h2>Winter Semester 2025/26 (TBA)</h2>
       <ul>
         <li>
-          <strong>Categorical Foundations XAI - Guest Lecturer</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
+          <strong>Guest Lecturer - Categorical Foundations of XAI</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
           <i>
             <em>TBA</em>
           </i>
