--- a/projects/index.html
+++ b/projects/index.html
@@ -18,7 +18,7 @@
       <h2>Seminars</h2>
       <ul>
         <li>
-          <strong>Homoclinic Points and Period Doubling </strong> Chaotic dynamics, TUM<br>
+          <strong>Homoclinic Points and Period Doubling </strong> Chaotic dynamics, TUM (Apr 2023)<br>
           <i>
             An introduction to homoclinic points and their connection to chaotic 
             dynamics – defining the concept, exploring their link to homoclinic orbits, 
@@ -26,7 +26,7 @@
           </i>
         </li>
         <li>
-          <strong>Classification of Isometries in the Euclidean Plane</strong> Geometry and Groups,  Hurwitz Seminar - TUM<br>
+          <strong>Classification of Isometries in the Euclidean Plane</strong> Geometry and Groups,  Hurwitz Seminar - TUM (Sep 2024)<br>
           <i>
             A concise overview of all distance‐preserving maps in the plane – translations, rotations, reflections and glide 
             reflections – showing each arises from at most three reflections and forming 
@@ -34,7 +34,7 @@
           </i>
         </li>
         <li>
-          <strong>Rational Functions on Plane Curves</strong> Algebraic Curves, TUM<br>
+          <strong>Rational Functions on Plane Curves</strong> Algebraic Curves, TUM (Jun 2025)<br>
           <i>
             The field of rational functions on projective plane curves over an algebraically 
             closed field was investigated, including the reconstruction of the one‑variable 
