--- a/projects/index.html
+++ b/projects/index.html
@@ -42,6 +42,12 @@
             and birational classification.
           </i>
         </li>
+        <li>
+          <strong>TBA</strong> Category Theory by Examples, TUM (Oct 2026)<br>
+          <i>
+            The seminar is ongoing.
+          </i>
+        </li>
       </ul>
     </section>
 
