--- a/projects/index.html
+++ b/projects/index.html
@@ -43,7 +43,7 @@
           </i>
         </li>
         <li>
-          <strong>TBA</strong> Category Theory by Examples, TUM (Oct 2026)<br>
+          <strong> <em>TBA</em> </strong> Category Theory, TUM (Oct 2026)<br>
           <i>
             The seminar is ongoing.
           </i>
@@ -56,7 +56,7 @@
       <h2>Honors & Awards</h2>
       <ul>
         <li>
-          <strong>Winning Team - Reply Challenge at TUM.ai Makeathon 2024</strong>, TUM<br>
+          <strong>Winning Team - Reply Challenge at TUM.ai Makeathon 2024</strong>, TUM (May 2024)<br>
           <i>
             My team won the Reply Challenge at the TUM.ai Makeathon 2024, making us one 
             of four winning teams – each selected for the best solution in a specific 
