--- a/teaching/index.html
+++ b/teaching/index.html
@@ -44,7 +44,7 @@
           </i>
         </li>
         <li>
-          <strong>Student Assistant</strong>, Algebra, TUM<br>
+          <strong>Student/Teaching Assistant</strong>, Algebra, TUM<br>
           <i>
             Responsible for grading and providing feedback on homework assignments and once assisted as a tutor.
           </i>
