--- a/teaching/index.html
+++ b/teaching/index.html
@@ -61,6 +61,12 @@
             <em>TBA</em>
           </i>
         </li>
+        <li>
+          <strong>Student Assistant</strong>, Linear Algebra, TUM<br>
+          <i>
+            Responsible for grading and providing feedback on homework assignments.
+          </i>
+        </li>
       </ul>
     </section>
 
