--- a/teaching/index.html
+++ b/teaching/index.html
@@ -53,7 +53,7 @@
     </section>
 
     <section class="teaching-block">
-      <h2>Winter Semester 2025/26 (TBA)</h2>
+      <h2>Winter Semester 2025/26</h2>
       <ul>
         <li>
           <strong>Guest Lecturer - Categorical Foundations of XAI</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
