--- a/teaching/index.html
+++ b/teaching/index.html
@@ -15,15 +15,14 @@
     <section class="teaching-block">
       <h2>Winter Semester 2024/25</h2>
       <ul>
-        <!--
         <li>
-          <strong>Guest Lecturer - Linear Algebra</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
+          <strong>Guest Presentation - Linear Algebra</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
           <i>
             Delivered a guest lecture on key concepts in linear algebra, aiming to equip 
             students with the foundational understanding needed to follow the 
             remainder of the course and comprehend the underlying mathematical structures.
           </i>
-        </li>-->
+        </li>
         <li>
           <strong>Student Assistant</strong>, Introduction to Probability Theory and Statistics, TUM<br>
           <i>
@@ -56,13 +55,12 @@
     <section class="teaching-block">
       <h2>Winter Semester 2025/26</h2>
       <ul>
-        <!--
         <li>
-          <strong>Guest Lecturer - Categorical Foundations of XAI</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
+          <strong>Guest Presentation - Categorical Foundations of XAI</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
           <i>
             <em>TBA</em>
           </i>
-        </li>-->
+        </li>
         <li>
           <strong>Student Assistant</strong>, Linear Algebra, TUM<br>
           <i>
