--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,84 +1,93 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Teaching – Jan Eickhoff</title>
-  <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-  <div class="center-wrapper">
-    <h1>Teaching</h1>
-    <p>Here you can find information about my  teaching activities.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Teaching – Jan Eickhoff</title>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
+    <div class="center-wrapper">
+      <h1>Teaching</h1>
+      <p>Here you can find information about my teaching activities.</p>
 
+      <!-- Neuer Abschnitt: Winter Semester 2024/25 -->
+      <section class="teaching-block">
+        <h2>Winter Semester 2024/25</h2>
+        <ul>
+          <li>
+            <strong>Guest Presentation - Linear Algebra</strong>, Explainable
+            Artificial Intelligence, DHBW Stuttgart<br />
+            <i>
+              Delivered a guest lecture on key concepts in linear algebra,
+              aiming to equip students with the foundational understanding
+              needed to follow the remainder of the course and comprehend the
+              underlying mathematical structures.
+            </i>
+          </li>
+          <li>
+            <strong>Student Assistant</strong>, Introduction to Probability
+            Theory and Statistics, TUM<br />
+            <i>
+              Responsible for grading and providing feedback on homework
+              assignments.
+            </i>
+          </li>
+        </ul>
+      </section>
 
-    <!-- Neuer Abschnitt: Winter Semester 2024/25 -->
-    <section class="teaching-block">
-      <h2>Winter Semester 2024/25</h2>
-      <ul>
-        <li>
-          <strong>Guest Presentation - Linear Algebra</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
-          <i>
-            Delivered a guest lecture on key concepts in linear algebra, aiming to equip 
-            students with the foundational understanding needed to follow the 
-            remainder of the course and comprehend the underlying mathematical structures.
-          </i>
-        </li>
-        <li>
-          <strong>Student Assistant</strong>, Introduction to Probability Theory and Statistics, TUM<br>
-          <i>
-            Responsible for grading and providing feedback on homework assignments.
-          </i>
-        </li>
-      </ul>
-    </section>
+      <!-- Neuer Abschnitt: Summer Semester 2025 -->
+      <section class="teaching-block">
+        <h2>Summer Semester 2025</h2>
+        <ul>
+          <li>
+            <strong>Teaching Assistant</strong>, Elementary Applications of
+            Mathematics in Computer Science and Engineering (STEM), TUM<br />
+            <i>
+              Led a tutorial group as part of a team of teaching assistants,
+              supporting students in understanding and applying mathematical
+              concepts relevant to STEM disciplines.
+            </i>
+          </li>
+          <li>
+            <strong>Student/Teaching Assistant</strong>, Algebra, TUM<br />
+            <i>
+              Responsible for grading and providing feedback on homework
+              assignments and once assisted as a tutor.
+            </i>
+          </li>
+        </ul>
+      </section>
 
-    <!-- Neuer Abschnitt: Summer Semester 2025 -->
-    <section class="teaching-block">
-      <h2>Summer Semester 2025</h2>
-      <ul>
-        <li>
-          <strong>Teaching Assistant</strong>, Elementary Applications of Mathematics in Computer Science and Engineering (STEM), TUM<br>
-          <i>
-          Led a tutorial group as part of a team of teaching assistants, supporting students in understanding and applying mathematical 
-          concepts relevant to STEM disciplines.
-          </i>
-        </li>
-        <li>
-          <strong>Student/Teaching Assistant</strong>, Algebra, TUM<br>
-          <i>
-            Responsible for grading and providing feedback on homework assignments and once assisted as a tutor.
-          </i>
-        </li>
-      </ul>
-    </section>
+      <section class="teaching-block">
+        <h2>Winter Semester 2025/26</h2>
+        <ul>
+          <li>
+            <strong>Guest Presentation - Categorical Foundations of XAI</strong
+            >, Explainable Artificial Intelligence, DHBW Stuttgart<br />
+            <i>
+              <em>TBA</em>
+            </i>
+          </li>
+          <li>
+            <strong>Student/Teaching Assistant</strong>, Linear Algebra, TUM<br />
+            <i>
+              Responsible for grading and providing feedback on homework
+              assignments, and assisting students once a week in homework help
+              sessions.
+            </i>
+          </li>
+        </ul>
+      </section>
 
-    <section class="teaching-block">
-      <h2>Winter Semester 2025/26</h2>
-      <ul>
-        <li>
-          <strong>Guest Presentation - Categorical Foundations of XAI</strong>, Explainable Artificial Intelligence, DHBW Stuttgart<br>
-          <i>
-            <em>TBA</em>
-          </i>
-        </li>
-        <li>
-          <strong>Student Assistant</strong>, Linear Algebra, TUM<br>
-          <i>
-            Responsible for grading and providing feedback on homework assignments.
-          </i>
-        </li>
-      </ul>
-    </section>
-
-    <nav>
-      <a href="/">Home</a>
-      <a href="/about/">About</a>
-      <a href="/interests/">Interests</a>
-      <a href="/teaching/" class="active">Teaching</a>
-      <a href="/projects/">Projects</a>
-      <a href="/blog/">Blog</a>
-      <a href="/contact/">Contact</a>
-    </nav>
-  </div>
-</body>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
+        <a href="/interests/">Interests</a>
+        <a href="/teaching/" class="active">Teaching</a>
+        <a href="/projects/">Projects</a>
+        <a href="/blog/">Blog</a>
+        <a href="/contact/">Contact</a>
+      </nav>
+    </div>
+  </body>
 </html>
