--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="center-wrapper">
       <div id="three-container" style="width: 400px; height: 400px"></div>
-      <h1>Jan etse Eickhoff</h1>
+      <h1>Jan Eickhoff</h1>
       <nav>
         <a href="/" class="active">Home</a>
         <a href="/about/">About</a>
