add teaching CT XAI

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -65,7 +65,9 @@
             <strong>Guest Presentation - Categorical Foundations of XAI</strong
             >, Explainable Artificial Intelligence, DHBW Stuttgart<br />
             <i>
-              <em>TBA</em>
+              Delivered a guest lecture on the key concepts of category theory
+              and institutional model theory to introduce an idea of a
+              categorical framework for XAI.
             </i>
           </li>
           <li>
