--- a/teaching/index.html
+++ b/teaching/index.html
@@ -68,6 +68,7 @@
               Delivered a guest lecture on the key concepts of category theory
               and institutional model theory to introduce an idea of a
               categorical framework for XAI.
+              <a href="files/CTXAI.pdf" target="_blank">slides</a>
             </i>
           </li>
           <li>
