--- a/teaching/index.html
+++ b/teaching/index.html
@@ -68,7 +68,11 @@
               Delivered a guest lecture on the key concepts of category theory
               and institutional model theory to introduce an idea of a
               categorical framework for XAI.
-              <a href="files/CTXAI.pdf" target="_blank">slides</a>
+              <a
+                href="https://eickhoffjan.github.io/files/CTXAI.pdf"
+                target="_blank"
+                >SLIDES</a
+              >
             </i>
           </li>
           <li>
