--- a/teaching/index.html
+++ b/teaching/index.html
@@ -76,7 +76,7 @@
             </i>
           </li>
           <li>
-            <strong>Student/Teaching Assistant</strong>, Linear Algebra, TUM<br />
+            <strong>Teaching Assistant</strong>, Linear Algebra, TUM<br />
             <i>
               Responsible for grading and providing feedback on homework
               assignments, and assisting students once a week in homework help
