--- a/teaching/index.html
+++ b/teaching/index.html
@@ -15,7 +15,7 @@
         <h2>Winter Semester 2024/25</h2>
         <ul>
           <li>
-            <strong>Guest Presentation - Linear Algebra</strong>, Explainable
+            <strong>Guest Lecture - Linear Algebra</strong>, Explainable
             Artificial Intelligence, DHBW Stuttgart<br />
             <i>
               Delivered a guest lecture on key concepts in linear algebra,
@@ -62,8 +62,8 @@
         <h2>Winter Semester 2025/26</h2>
         <ul>
           <li>
-            <strong>Guest Presentation - Categorical Foundations of XAI</strong
-            >, Explainable Artificial Intelligence, DHBW Stuttgart<br />
+            <strong>Guest Lecture - Categorical Foundations of XAI</strong>,
+            Explainable Artificial Intelligence, DHBW Stuttgart<br />
             <i>
               Delivered a guest lecture on the key concepts of category theory
               and institutional model theory to introduce an idea of a
